maintain the width

--- a/iframe.html
+++ b/iframe.html
@@ -10,7 +10,7 @@
 
     <div class="container">
 
-        <iframe src="https://confident-goldwasser-b4cbb7.netlify.app/"></iframe>
+        <iframe src="https://confident-goldwasser-b4cbb7.netlify.app/" scroll="no"></iframe>
 
     </div>
     
