added iframe files and some modifications

--- a/iframe.html
+++ b/iframe.html
@@ -8,11 +8,8 @@
 </head>
 <body>
 
-    <div class="container">
-
-        <iframe src="https://confident-goldwasser-b4cbb7.netlify.app/" scroll="no"></iframe>
-
-    </div>
+        <iframe src="https://confident-goldwasser-b4cbb7.netlify.app/"></iframe>
+        
     
 </body>
 </html>
