--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Titillium+Web&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Circle Patterns</title>
 </head>
 <body>
     <!--Header-->
     <header class="header">
+
         <a href="#" class="logo">LOGO</a>
 
         <div class="menu-btn">
@@ -38,7 +39,7 @@
             <img src="img/undraw_fitness_stats_sht6.svg" alt="social image">
         </div>
 
-        <!--Wave-->
+        <!--First Wave-->
         <div class="custom-shape-divider-bottom-1601122402">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
@@ -48,8 +49,13 @@
     </section>
 
     <!--second section-->
+    <div class="section-title">
+        <h1>Benefits of <span class="main">Calisthenics</span></h1>
+    </div>
+
     <sction class="section sec-section">
         
+        <!--columns-->
         <div class="sec-col">
 
             <div class="title">
@@ -71,11 +77,13 @@
                 <h1>Mindful</h1>
                 <h2>Makes You</h2>
             </div>
+
             <img src="img/undraw_mindfulness_scgo.svg" alt="basketball">
 
             <div class="content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa debitis unde eaque alias sed, doloribus minus, neque quibusdam ullam deleniti, quam maxime. Laboriosam, adipisci! Magni delectus commodi harum fuga accusamus.</p>
             </div>
+
         </div>
 
         <div class="sec-col">
@@ -84,12 +92,15 @@
                 <h1>Super</h1>
                 <h2>Makes You</h2>
             </div>
+
             <img src="img/undraw_super_woman_dv0y.svg" alt="finish line">
             
             <div class="content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa debitis unde eaque alias sed, doloribus minus, neque quibusdam ullam deleniti, quam maxime. Laboriosam, adipisci! Magni delectus commodi harum fuga accusamus.</p>
             </div>
+
         </div>
+
     </sction>
 
     <!--Footer-->
@@ -105,11 +116,13 @@
             <li><a href="#">About</a></li>
         </ul>
 
+        <!--Second wave-->
         <div class="custom-shape-divider-top-1601157215">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                 <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
             </svg>
         </div>
+
     </div>
 
     <script src="main.js"></script>
